--- a/nx.json
+++ b/nx.json
@@ -1,8 +1,4 @@
 {
-  "npmScope": "mozart",
-  "affected": {
-    "defaultBase": "master"
-  },
   "implicitDependencies": {
     "workspace.json": "*",
     "package.json": {
@@ -14,6 +10,10 @@
     ".eslintrc.json": "*",
     "nx.json": "*"
   },
+  "affected": {
+    "defaultBase": "master"
+  },
+  "npmScope": "mozart",
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/nx-cloud",
@@ -30,5 +30,15 @@
       }
     }
   },
-  "projects": {}
+  "projects": {
+    "blog": {
+      "tags": []
+    },
+    "blog-e2e": {
+      "tags": [],
+      "implicitDependencies": [
+        "blog"
+      ]
+    }
+  }
 }
