--- a/package.json
+++ b/package.json
@@ -26,16 +26,56 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
+    "next": "10.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-is": "17.0.2",
+    "regenerator-runtime": "0.13.7",
+    "styled-components": "5.2.1",
+    "tslib": "^2.0.0"
+  },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "11.5.1",
+    "@nrwl/cypress": "12.3.3",
+    "@nrwl/eslint-plugin-nx": "12.3.3",
+    "@nrwl/jest": "12.3.3",
+    "@nrwl/linter": "12.3.3",
     "@nrwl/next": "^12.3.3",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "12.3.3",
     "@nrwl/tao": "11.5.1",
+    "@nrwl/web": "12.3.3",
     "@nrwl/workspace": "11.5.1",
+    "@testing-library/react": "11.2.6",
+    "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@types/react-is": "17.0.0",
+    "@types/styled-components": "5.1.9",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
+    "babel-jest": "26.2.2",
+    "babel-plugin-styled-components": "1.10.7",
+    "cypress": "^6.0.1",
     "dotenv": "6.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "26.2.2",
     "prettier": "2.2.1",
+    "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
     "typescript": "~4.0.3"
   }
