--- a/package.json
+++ b/package.json
@@ -42,20 +42,21 @@
     "@babel/preset-env": "7.12.13",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cli": "11.5.1",
-    "@nrwl/cypress": "12.3.3",
-    "@nrwl/eslint-plugin-nx": "12.3.3",
-    "@nrwl/jest": "12.3.3",
-    "@nrwl/linter": "12.3.3",
-    "@nrwl/next": "^12.3.3",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "12.3.3",
-    "@nrwl/tao": "11.5.1",
-    "@nrwl/web": "12.3.3",
-    "@nrwl/workspace": "11.5.1",
+    "@nrwl/cli": "12.3.4",
+    "@nrwl/cypress": "12.3.4",
+    "@nrwl/eslint-plugin-nx": "12.3.4",
+    "@nrwl/jest": "12.3.4",
+    "@nrwl/linter": "12.3.4",
+    "@nrwl/next": "12.3.4",
+    "@nrwl/node": "12.3.4",
+    "@nrwl/nx-cloud": "12.1.3",
+    "@nrwl/react": "12.3.4",
+    "@nrwl/tao": "12.3.4",
+    "@nrwl/web": "12.3.4",
+    "@nrwl/workspace": "12.3.4",
     "@testing-library/react": "11.2.6",
     "@types/jest": "26.0.8",
-    "@types/node": "12.12.38",
+    "@types/node": "14.14.33",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
     "@types/react-is": "17.0.0",
@@ -65,7 +66,7 @@
     "babel-jest": "26.2.2",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^6.0.1",
-    "dotenv": "6.2.0",
+    "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
@@ -77,6 +78,6 @@
     "prettier": "2.2.1",
     "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
-    "typescript": "~4.0.3"
+    "typescript": "4.1.4"
   }
 }
