--- a/apps/infrastructure/tsconfig.json
+++ b/apps/infrastructure/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2018",
     "module": "commonjs",
@@ -13,11 +14,9 @@
     "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": false,
-    "inlineSourceMap": true,
-    "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "typeRoots": ["./node_modules/@types"]
+    "typeRoots": ["../../node_modules/@types"]
   },
   "exclude": ["cdk.out"],
   "files": [],
