--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-is": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.2.1",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "@aws-cdk/core": "1.106.0",
+    "source-map-support": "^0.5.16"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
@@ -78,6 +80,8 @@
     "prettier": "2.2.1",
     "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
-    "typescript": "4.1.4"
+    "typescript": "4.1.4",
+    "aws-cdk": "1.106.0",
+    "@aws-cdk/assert": "1.106.0"
   }
 }
