--- a/apps/infra/.eslintrc.json
+++ b/apps/infra/.eslintrc.json
@@ -15,7 +15,7 @@
       ],
       "parserOptions": {
         "project": [
-          "apps/infrastructure/tsconfig.*?.json"
+          "apps/infra/tsconfig.*?.json"
         ]
       },
       "rules": {}
