--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "private": true,
   "dependencies": {
+    "@aws-cdk/core": "1.106.0",
+    "@nrwl/next": "12.3.5",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "next": "10.2.0",
@@ -34,12 +36,12 @@
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
     "regenerator-runtime": "0.13.7",
+    "source-map-support": "^0.5.16",
     "styled-components": "5.2.1",
-    "tslib": "^2.0.0",
-    "@aws-cdk/core": "1.106.0",
-    "source-map-support": "^0.5.16"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@aws-cdk/assert": "1.106.0",
     "@babel/core": "7.12.13",
     "@babel/preset-env": "7.12.13",
     "@babel/preset-react": "7.12.13",
@@ -49,7 +51,7 @@
     "@nrwl/eslint-plugin-nx": "12.3.4",
     "@nrwl/jest": "12.3.4",
     "@nrwl/linter": "12.3.4",
-    "@nrwl/next": "12.3.4",
+    "@nrwl/next": "^12.3.5",
     "@nrwl/node": "12.3.4",
     "@nrwl/nx-cloud": "12.1.3",
     "@nrwl/react": "12.3.4",
@@ -65,6 +67,7 @@
     "@types/styled-components": "5.1.9",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
+    "aws-cdk": "1.106.0",
     "babel-jest": "26.2.2",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^6.0.1",
@@ -80,8 +83,6 @@
     "prettier": "2.2.1",
     "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
-    "typescript": "4.1.4",
-    "aws-cdk": "1.106.0",
-    "@aws-cdk/assert": "1.106.0"
+    "typescript": "4.1.4"
   }
 }
